# FASTAPI-course

FASTAPI/first-steps/: blog.db  main.py  pyproject.toml
FASTAPI/first-steps/app/: main.py
FASTAPI/first-steps/app/api/v1/auth/: router.py  schemas.py
FASTAPI/first-steps/app/api/v1/posts/: repository.py  router.py  schemas.py
FASTAPI/first-steps/app/core/: db.py  security.py
