[project]
name = "first-steps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "greenlet<3.2",
    "PyJWT>=2.10.1",
    "psycopg[binary]>=3.2.13",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.39.0",
]
